Fix Styling on iOS

--- a/components/pages/Auth.module.css
+++ b/components/pages/Auth.module.css
@@ -56,7 +56,7 @@
 }
 
 .authButton span {
-    font-size: 22px;
+    font-size: 20px;
 }
 
 #authProviders {
@@ -104,6 +104,7 @@
 }
 
 .inputContainer input {
+    -webkit-appearance: none;
     width: 100%;
     background-color: #ffffff;
     width: 100%;
@@ -139,6 +140,7 @@
 #submitButton {
     width: 100%;
     background-color: #5f00f6;
+    -webkit-appearance: none;
     color: white;
     width: 100%;
     height: 50px;
@@ -188,11 +190,14 @@
     font-size: 36px;
     font-weight: normal;
     box-sizing: border-box;
+    padding: 0px;
+    box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+    -webkit-appearance: none;
 }
 
 #authCodeContainer {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 #verifyErrorText {
